--- a/common/common.scss
+++ b/common/common.scss
@@ -3,8 +3,7 @@
 }
 
 @media screen and (min-width: 1300px) {
-
-  html:not(.fullscreen-composer) {  
+  html:not(.fullscreen-composer) {
     .peek-mode-toggle svg {
       transform: scaleX(-1);
     }
@@ -13,14 +12,15 @@
         display: inline;
       }
       .full-width-enabled.peek-mode-active {
-
         .grippie {
           display: none;
         }
-      
+
         &.has-sidebar-page {
           #main-outlet-wrapper {
-            grid-template-columns: var(--d-sidebar-width) calc(100vw - 35vw - var(--d-sidebar-width)) 1fr;
+            grid-template-columns: var(--d-sidebar-width) calc(
+                100vw - 35vw - var(--d-sidebar-width)
+              ) 1fr;
           }
           #reply-control:not(.fullscreen).hide-preview {
             transform: translateX(calc(100vw - 33vw));
