--- a/common/common.scss
+++ b/common/common.scss
@@ -28,6 +28,7 @@
             width: 33vw;
             right: unset;
             left: unset;
+            max-width: 33vw;
           }
         }
 
@@ -39,6 +40,7 @@
             transform: translateX(calc(100vw - 47vw));
             height: 100vh;
             width: 47vw;
+            max-width: 47vw;
             right: unset;
             left: unset;
           }
