--- a/common/common.scss
+++ b/common/common.scss
@@ -61,3 +61,13 @@
     }
   }
 }
+
+.alert-peek-mode-dependency {
+  text-align: center;
+  margin: 0;
+
+  .d-icon {
+    margin-right: 0.5em;
+    color: var(--primary-high);
+  }
+}
